tests/parser/errors/dataset_unterminated_list.mochi
let result = from x in [1, 2, 3
